--- a/Times-Project/examples/02_render.html
+++ b/Times-Project/examples/02_render.html
@@ -13,6 +13,6 @@
 <p>Tests #01 - Display various data</p>
 <div id="workspace"></div>
 
-<script type="text/javascript" src="../src/process/skeletonize.js"></script>
+<script type="text/javascript" src="../src/process/morphology.js"></script>
 </body>
 </html>
