--- a/Times-Project/examples/watershed_render.html
+++ b/Times-Project/examples/watershed_render.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf8">
-<title>Test Skeletonize</title>
+<title>Test Watershed</title>
 <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet"> 
 <link rel="stylesheet" type="text/css" href="../css/times.css">
 <script type="text/javascript" src="../javascripts/TIMES.bundle.js"></script>
@@ -13,6 +13,6 @@
 <p>Tests #01 - Display various data</p>
 <div id="workspace"></div>
 
-<script type="text/javascript" src="../src/process/skeletonize.js"></script>
+<script type="text/javascript" src="../src/process/watershed.js"></script>
 </body>
 </html>
