Multiple s minor bug corrected, but still wip

--- a/Times-Project/examples/dilate_test.html
+++ b/Times-Project/examples/dilate_test.html
@@ -7,6 +7,7 @@
 <link rel="stylesheet" type="text/css" href="../css/times.css">
 <script type="text/javascript" src="../javascripts/TIMES.bundle.js"></script>
 <script type="text/javascript" src="../samples/b_image2.js"></script>
+<script type="text/javascript" src="../samples/struc_cross.js"></script>
 
 </head>
 <body>
