--- a/Times-Project/examples/dilate_test.html
+++ b/Times-Project/examples/dilate_test.html
@@ -6,7 +6,7 @@
 <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet"> 
 <link rel="stylesheet" type="text/css" href="../css/times.css">
 <script type="text/javascript" src="../javascripts/TIMES.bundle.js"></script>
-<script type="text/javascript" src="../samples/b_image2.js"></script>
+<script type="text/javascript" src="../samples/b_image2_test.js"></script>
 <script type="text/javascript" src="../samples/mask3by3Star.js"></script>
 
 </head>
