--- a/Times-Project/examples/dilate_test.html
+++ b/Times-Project/examples/dilate_test.html
@@ -11,7 +11,7 @@
 <script type="text/javascript" src="../samples/struc_cross.js"></script>
 <script type="text/javascript" src="../samples/mask3by3Star.js"></script>
 -->
-<script type="text/javascript" src="../samples/struc_cross.js"></script>
+<script type="text/javascript" src="../samples/mask3by3Star.js"></script>
 
 </head>
 <body>
