push erode still wip

--- a/Times-Project/examples/erode_test.html
+++ b/Times-Project/examples/erode_test.html
@@ -2,22 +2,20 @@
 <html>
 <head>
 <meta charset="utf8">
-<title>Test Dilatation</title>
+<title>Test Erode</title>
 <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet"> 
 <link rel="stylesheet" type="text/css" href="../css/times.css">
 <script type="text/javascript" src="../javascripts/TIMES.bundle.js"></script>
 <script type="text/javascript" src="../samples/b_image2.js"></script>
-<!--
 <script type="text/javascript" src="../samples/struc_cross.js"></script>
 <script type="text/javascript" src="../samples/mask3by3Star.js"></script>
--->
-<script type="text/javascript" src="../samples/struc_cross.js"></script>
+
 
 </head>
 <body>
-<p>Tests #01 - Dilation !</p>
+<p>Tests #01 - Erode !</p>
 <div id="workspace"></div>
 
-<script type="text/javascript" src="../src/process/dilate.js"></script>
+<script type="text/javascript" src="../src/process/erode_am.js"></script>
 </body>
 </html>
