--- a/Times-Project/examples/opening_test.html
+++ b/Times-Project/examples/opening_test.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf8">
-<title>Test Erode</title>
+<title>Test Opening</title>
 <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet"> 
 <link rel="stylesheet" type="text/css" href="../css/times.css">
 <script type="text/javascript" src="../javascripts/TIMES.bundle.js"></script>
@@ -15,9 +15,9 @@
 
 </head>
 <body>
-<p>Tests #01 - Erode !</p>
+<p>Tests #01 - Opening !</p>
 <div id="workspace"></div>
 
-<script type="text/javascript" src="../src/process/erode.js"></script>
+<script type="text/javascript" src="../src/process/opening.js"></script>
 </body>
 </html>
