--- a/Times-Project/examples/dilate_test.html
+++ b/Times-Project/examples/dilate_test.html
@@ -7,11 +7,10 @@
 <link rel="stylesheet" type="text/css" href="../css/times.css">
 <script type="text/javascript" src="../javascripts/TIMES.bundle.js"></script>
 <script type="text/javascript" src="../samples/b_image2.js"></script>
-<!--
 <script type="text/javascript" src="../samples/struc_cross.js"></script>
 <script type="text/javascript" src="../samples/mask3by3Star.js"></script>
--->
-<script type="text/javascript" src="../samples/struc_cross.js"></script>
+<script type="text/javascript" src="../samples/square_struc.js"></script>
+<script type="text/javascript" src="../samples/b_image3.js"></script>
 
 </head>
 <body>
