changed etode_test in html

--- a/Times-Project/examples/erode_test.html
+++ b/Times-Project/examples/erode_test.html
@@ -19,6 +19,6 @@
 <div id="workspace"></div>
 
 <script type="text/javascript" src="../src/process/erode.js"></script>
-<script type="text/javascript" src="./erode.js"></script>
+<script type="text/javascript" src="./erode_test.js"></script>
 </body>
 </html>
