Format like asked in 3 files

--- a/Times-Project/examples/closing_test.html
+++ b/Times-Project/examples/closing_test.html
@@ -20,5 +20,6 @@
 <div id="workspace"></div>
 
 <script type="text/javascript" src="../src/process/closing.js"></script>
+<script type="text/javascript" src="./closing_test.js"></script>
 </body>
 </html>
