--- a/Times-Project/examples/dilate_test.html
+++ b/Times-Project/examples/dilate_test.html
@@ -18,5 +18,6 @@
 <div id="workspace"></div>
 
 <script type="text/javascript" src="../src/process/dilate.js"></script>
+<script type="text/javascript" src="./dilate_test.js"></script>
 </body>
 </html>
