--- a/Times-Project/examples/opening_test.html
+++ b/Times-Project/examples/opening_test.html
@@ -20,5 +20,6 @@
 <div id="workspace"></div>
 
 <script type="text/javascript" src="../src/process/opening.js"></script>
+<script type="text/javascript" src="./opening_test.js"></script>
 </body>
 </html>
