--- a/Times-Project/examples/03_render.html
+++ b/Times-Project/examples/03_render.html
@@ -6,9 +6,9 @@
 <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet"> 
 <link rel="stylesheet" type="text/css" href="../css/times.css">
 <script type="text/javascript" src="../javascripts/TIMES.bundle.js"></script>
-<script type="text/javascript" src="../src/process/erode.js"></script>
-<script type="text/javascript" src="../samples/TEST.js"></script>
-<script type="text/javascript" src="../samples/star3x3Mask.js"></script>
+<script type="text/javascript" src="../src/process/Hit_or_Miss_v2.js"></script>
+<script type="text/javascript" src="../samples/b_image2.js"></script>
+<script type="text/javascript" src="../samples/maskAngle.js"></script>
 
 </head>
 <body>
