updates image display

--- a/Times-Project/examples/skeletonize_render.html
+++ b/Times-Project/examples/skeletonize_render.html
@@ -14,5 +14,6 @@
 <div id="workspace"></div>
 
 <script type="text/javascript" src="../src/process/skeletonize.js"></script>
+<script type="text/javascript" src="../examples/skeletonize_render.js"></script>
 </body>
 </html>
