--- a/Times-Project/examples/watershed_render.html
+++ b/Times-Project/examples/watershed_render.html
@@ -15,5 +15,6 @@
 <div id="workspace"></div>
 
 <script type="text/javascript" src="../src/process/watershed.js"></script>
+<script type="text/javascript" src="../examples/watershed_render.js"></script>
 </body>
 </html>
