--- a/Times-Project/examples/dilate_test.html
+++ b/Times-Project/examples/dilate_test.html
@@ -11,6 +11,8 @@
 <script type="text/javascript" src="../samples/mask3by3Star.js"></script>
 <script type="text/javascript" src="../samples/square_struc.js"></script>
 <script type="text/javascript" src="../samples/b_image3.js"></script>
+<script type="text/javascript" src="../samples/working_image.js"></script>
+
 
 </head>
 <body>
