--- a/Bibliography/Step #2 JS Implementation/benchmarks/benchstart.html
+++ b/Bibliography/Step #2 JS Implementation/benchmarks/benchstart.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf8">
-<title>Test Watershed</title>
+<title>Benchmark Test</title>
 <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet"> 
 <link rel="stylesheet" type="text/css" href="../css/times.css">
 <script type="text/javascript" src="../../../Times-Project/javascripts/TIMES.bundle.js"></script>
@@ -23,7 +23,7 @@
 <p>Tests #01 - Display various data</p>
 <div id="workspace"></div>
 
-<script type="text/javascript" src="../../../Times-Project/src/process/erode.js"></script>
+<script type="text/javascript" src="../../../Times-Project/src/process/watershed.js"></script>
 <script type="text/javascript" src="./benchmark_Times_ImageJ.js"></script>
 </body>
 </html>
