hit or miss masque croix
hit or miss masque croix

--- a/Times-Project/examples/03_render.html
+++ b/Times-Project/examples/03_render.html
@@ -8,7 +8,7 @@
 <script type="text/javascript" src="../javascripts/TIMES.bundle.js"></script>
 <script type="text/javascript" src="../src/process/hit_or_miss.js"></script>
 <script type="text/javascript" src="../samples/b_image2.js"></script>
-<script type="text/javascript" src="../samples/maskAngle.js"></script>
+<script type="text/javascript" src="../samples/mask3by3Star.js"></script>
 
 </head>
 <body>
