report- watershed draft added and back to an older version

--- a/Times-Project/examples/watershed_render.html
+++ b/Times-Project/examples/watershed_render.html
@@ -8,6 +8,7 @@
 <script type="text/javascript" src="../javascripts/TIMES.bundle.js"></script>
 <script type="text/javascript" src="../samples/b_image2.js"></script>
 <script type="text/javascript" src="../samples/b_image3.js"></script>
+<script type="text/javascript" src="../samples/b_250_250.js"></script>
 
 </head>
 <body>
