--- a/Times-Project/examples/03_render.html
+++ b/Times-Project/examples/03_render.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" type="text/css" href="../css/times.css">
 <script type="text/javascript" src="../javascripts/TIMES.bundle.js"></script>
 <script type="text/javascript" src="../src/process/hit_or_miss.js"></script>
-<script type="text/javascript" src="../samples/b_image2.js"></script>
+<script type="text/javascript" src="../samples/b_350_350.js"></script>
 <script type="text/javascript" src="../samples/mask3by3Star.js"></script>
 
 </head>
