--- a/Times-Project/examples/skeletonize_render.html
+++ b/Times-Project/examples/skeletonize_render.html
@@ -4,8 +4,8 @@
 <meta charset="utf8">
 <title>Test Skeletonize</title>
 <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet"> 
-<link rel="stylesheet" type="text/css" href="../css/times.css">
-<script type="text/javascript" src="../javascripts/TIMES.bundle.js"></script>
+<link rel="stylesheet" type="text/css" href="https://rawgit.com/crazybiocomputing/times/master/css/times.css">
+<script type="text/javascript" src="https://rawgit.com/crazybiocomputing/times/master/javascripts/TIMES.bundle.js"></script>
 <script type="text/javascript" src="../samples/b_image2.js"></script>
 
 </head>
@@ -13,7 +13,7 @@
 <p>Tests #01 - Display various data</p>
 <div id="workspace"></div>
 
-<script type="text/javascript" src="../src/process/morphology.js"></script>
-<script type="text/javascript" src="../examples/skeletonize_render.js"></script>
+<script type="text/javascript" src="../src/cpu/process/skeletonize.js"></script>
+<script type="text/javascript" src="skeletonize_render.js"></script>
 </body>
 </html>
