--- a/Times-Project/examples/skeletonize_render.html
+++ b/Times-Project/examples/skeletonize_render.html
@@ -4,8 +4,8 @@
 <meta charset="utf8">
 <title>Test Skeletonize</title>
 <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet"> 
-<link rel="stylesheet" type="text/css" href="https://rawgit.com/crazybiocomputing/times/master/css/times.css">
-<script type="text/javascript" src="https://rawgit.com/crazybiocomputing/times/master/javascripts/TIMES.bundle.js"></script>
+<link rel="stylesheet" type="text/css" href="../../../times/css/times.css">
+<script type="text/javascript" src="../../../times/javascripts/TIMES.bundle.js"></script>
 <script type="text/javascript" src="../samples/b_image2.js"></script>
 
 </head>
