--- a/Times-Project/examples/skeletonize_render.html
+++ b/Times-Project/examples/skeletonize_render.html
@@ -7,6 +7,7 @@
 <link rel="stylesheet" type="text/css" href="../../../times/css/times.css">
 <script type="text/javascript" src="../../../times/javascripts/TIMES.bundle.js"></script>
 <script type="text/javascript" src="../samples/b_image2.js"></script>
+<script type="text/javascript" src="../samples/b_250_250.js"></script>
 
 </head>
 <body>
