first html-gpu test

--- a/Times-Project/examples/gpuSkeletonizeTest.html
+++ b/Times-Project/examples/gpuSkeletonizeTest.html
@@ -12,8 +12,10 @@
 
 </head>
 <body>
-<p>Tests #01 - Display various data</p>
-<div id="workspace"></div>
+<p>Tests - Skeletonize via GPU</p>
+<div id="workspace">
+    <canvas id="skeletonize" width="500" height="500"></canvas>
+</div>
 
 <script type="text/javascript" src="../src/gpu/gpuSkeletonize.js"></script>
 <script type="text/javascript" src="gpuSkeletonize.js"></script>
