some weird webGL errors ...

--- a/Times-Project/examples/gpuSkeletonizeTest.html
+++ b/Times-Project/examples/gpuSkeletonizeTest.html
@@ -18,6 +18,6 @@
 </div>
 
 <script type="text/javascript" src="../src/gpu/gpuSkeletonize.js"></script>
-<script type="text/javascript" src="gpuSkeletonize.js"></script>
+<script type="text/javascript" src="gpuSkeletonizeTest.js"></script>
 </body>
 </html>
