--- a/Bibliography/Step #2 JS Implementation/benchmarks/benchstart.html
+++ b/Bibliography/Step #2 JS Implementation/benchmarks/benchstart.html
@@ -4,8 +4,8 @@
 <meta charset="utf8">
 <title>Benchmark Test</title>
 <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet"> 
-<link rel="stylesheet" type="text/css" href="../css/times.css">
-<script type="text/javascript" src="../../../Times-Project/javascripts/TIMES.bundle.js"></script>
+<link rel="stylesheet" type="text/css" href="../../../../times/css/times.css">
+<script type="text/javascript" src="../../../../times/javascripts/TIMES.bundle.js"></script>
 <script type="text/javascript" src="./Images/b_50_50.js"></script>
 <script type="text/javascript" src="./Images/b_150_150.js"></script>
 <script type="text/javascript" src="./Images/b_250_250.js"></script>
